<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_inicio">

    <fragment
        android:id="@+id/menu_inicio"
        android:name="com.example.idiomaster.ui.inicio.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_historias"
        android:name="com.example.idiomaster.ui.historias.StoriesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_stories" />

    <fragment
        android:id="@+id/menu_configuracion"
        android:name="com.example.idiomaster.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>