<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:lottie_rawRes="@raw/triste" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/si_abandonas_perderas_todo_tu_progreso_de_este_nivel"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/seguir_aprendiendo"/>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/salir"
        android:textColor="@color/design_default_color_error"
        android:background="@color/transparent"/>

</LinearLayout>